--- a/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/flight-inf/flight-inf.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/flight-inf/flight-inf.component.html
@@ -5,8 +5,8 @@
             <img mat-card-image src={{flight.imgUrl}} alt={{flight.destination}} height="290" width="500"/>
         </div>
         <div class="col col2">
-            <p>Departure time:  {{flight.departureTime | date:'medium'}}</p>
-            <p>Landing time:  {{flight.landingTime | date:'medium'}}</p>
+            <p>Departure time:  {{flight.departureTime | date:'medium':'+0000'}}</p>
+            <p>Landing time:  {{flight.landingTime | date:'medium':'+0000'}}</p>
             <p>Origin: {{flight.origin}}</p>
             <p>Ticket price: {{flight.ticketPrice}}€</p>
             <p>Amount of available tickets: {{flight.numOfAvailableTickets}}</p>
