--- a/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/create-flight/create-flight.component.css
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/create-flight/create-flight.component.css
@@ -1,4 +1,22 @@
-.row{
-    width: 70%;
-    margin:0 auto;
+mat-card {
+    max-width: 30%;
+    margin: 5em auto;
+    text-align: center;
+}
+
+mat-card-content {
+    padding-top: 2em;
+    display: flex;
+    flex-direction: column;
+}
+
+mat-card-actions button {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    align-items: center;
+}
+mat-card-title{
+    color:#3f51b5;
+    font-size: x-large;
 }
