--- a/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/flight-inf/flight-inf.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/admin-flights/flight-inf/flight-inf.component.html
@@ -1,16 +1,16 @@
-<div class="container">
-    <div class = "row">
-        <div class="col col1">
-            <h2>{{flight.destination}}</h2>
-            <img mat-card-image src={{flight.imgUrl}} alt={{flight.destination}} height="290" width="500"/>
-        </div>
-        <div class="col col2">
-            <p>Departure time:  {{flight.departureTime | date:'medium':'+0000'}}</p>
-            <p>Landing time:  {{flight.landingTime | date:'medium':'+0000'}}</p>
-            <p>Origin: {{flight.origin}}</p>
-            <p>Ticket price: {{flight.ticketPrice}}€</p>
-            <p>Amount of available tickets: {{flight.numOfAvailableTickets}}</p>
-            <button (click)="deleteFlight()">Delete flight</button>
-        </div> 
-    </div>
-</div>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>{{flight.destination}}</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src={{flight.imgUrl}} alt={{flight.destination}} height="290" width="500">
+    <mat-card-content>
+        <p>Departure time:  {{flight.departureTime | date:'medium':'+0000'}}</p>
+        <p>Landing time:  {{flight.landingTime | date:'medium':'+0000'}}</p>
+        <p>Origin: {{flight.origin}}</p>
+        <p>Ticket price: {{flight.ticketPrice}}€</p>
+        <p>Amount of available tickets: {{flight.numOfAvailableTickets}}</p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button (click)="deleteFlight()" color="primary">Delete flight</button>
+    </mat-card-actions>
+</mat-card>
