implemented ticket purchasing system, UI unfinished

--- a/flight-booking/client/flight-booking/src/app/modules/flights/create-flight/create-flight.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/create-flight/create-flight.component.html
@@ -21,7 +21,7 @@
                 <input matInput type="text" required [(ngModel)]="flight.origin" name="origin">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Tiket price</mat-label>
+                <mat-label>Ticket price</mat-label>
                 <input matInput type="number" required [(ngModel)]="flight.ticketPrice" name="ticketPrice">
             </mat-form-field>
             <mat-form-field appearance="outline">
