--- a/flight-booking/client/flight-booking/src/app/modules/flights/flight-inf/flight-inf.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/flight-inf/flight-inf.component.html
@@ -11,6 +11,7 @@
         <p>Amount of available tickets: {{flight.numOfAvailableTickets}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button (click)="deleteFlight()" color="primary">Delete flight</button>
+        <button mat-raised-button (click)="deleteFlight()" color="primary"  *ngIf="userRole == 'ADMIN'">Delete flight</button>
+        <button mat-raised-button (click)="bookFlight()" color="primary"  *ngIf="userRole == 'USER' && temp">Book flight</button>
     </mat-card-actions>
 </mat-card>
