implemented validation for ticket amount choosing

--- a/flight-booking/client/flight-booking/src/styles.scss
+++ b/flight-booking/client/flight-booking/src/styles.scss
@@ -26,3 +26,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       --mdc-snackbar-supporting-text-color: #fff;
     }
   }
+
+  .mat-mdc-snack-bar-container {
+    &.red-snackbar {
+      --mdc-snackbar-container-color: #b53f3f;
+      --mat-mdc-snack-bar-button-color: #fff;
+      --mdc-snackbar-supporting-text-color: #fff;
+    }
+  }
