--- a/flight-booking/client/flight-booking/src/app/modules/flights/flights-list/flights-list.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/flights/flights-list/flights-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row custom">
-        <div class="col-md-3 mx-auto my-5 image-card" *ngFor="let flight of flights" (click) = "flightInfo(flight)">
+        <div class="col-md-3 mx-auto my-5 image-card" *ngFor="let flight of flights; let i = index" (click) = "flightInfo(flight, i)">
             <mat-card id="image-card">
             <img mat-card-image src={{flight.imgUrl}} alt={{flight.destination}} class="img"/>
             <mat-card-content>
