Implement registration feature

--- a/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
       <button mat-icon-button class="example-icon" (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Flight Booking</span>
+      <span>Accommodation Booking</span>
       <span class="spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="accountMenu" *ngIf="isUserLogged">
         <mat-icon>account_circle</mat-icon>
