--- a/accommodation-booking/client/accommodation-booking/src/app/modules/user/profile/profile.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/user/profile/profile.component.html
@@ -1,2 +1,4 @@
-<p>profile works!</p>
-<button (click)="changeCredentials()">ChangeCredentials</button>
+<button (click)="changeCredentials()">Change Credentials</button>
+<button (click)="getUserProfile()">Get UserInfo</button>
+<button (click)="editProfile()">Edit Profile</button>
+<button (click)="deleteProfile()">Delete Profile</button>
