--- a/accommodation-booking/client/accommodation-booking/src/app/modules/reservation/reservation-requests/reservation-requests.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/reservation/reservation-requests/reservation-requests.component.html
@@ -1,2 +1,3 @@
 <button (click)="approveRequest('2bcd34ab-76da-44c2-969d-b1491a6f5d3e')">Approve Request</button>
 <button (click)="declineRequest('2bcd34ab-76da-44c2-969d-b1491a6f5d3e')">Decline Request</button>
+<button (click)="deleteRequest('2bcd34ab-76da-44c2-969d-b1491a6f5d3e')">Delete Request</button>
