created endpoint for retrieving accomodation covers

--- a/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
@@ -24,6 +24,12 @@
               <span matLine>Home</span>
             </div>
           </a>
+          <a mat-list-item routerLink="/accomodation" *ngIf="userRole == 'HOST'">
+            <div>
+              <mat-icon fontIcon="bed"></mat-icon>
+              <span matLine>My Accomodations</span>
+            </div>
+          </a>
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content>
