fixed merge errors

--- a/accommodation-booking/client/accommodation-booking/src/app/modules/accomodation/accomodation-card/accomodation-card.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/accomodation/accomodation-card/accomodation-card.component.html
@@ -7,7 +7,7 @@
             <p>{{accomodation.location.country}}, {{accomodation.location.city}}, {{accomodation.location.street}} {{accomodation.location.number}}</p>
             <p>{{accomodation.description}}</p>
             <p>Guests: {{accomodation.minGuests}} - {{accomodation.maxGuests}}</p>
-            <p>Price type: {{accomodation.priceType}}</p>
+            <p>Price: {{accomodation.generalPrice}} EUR, {{accomodation.priceType}}</p>
         </mat-card-content>
         <mat-card-actions>
             <button mat-flat-button color="primary">View Details</button>
