--- a/accommodation-booking/client/accommodation-booking/src/app/modules/accomodation/accomodation-info/accomodation-info.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/accomodation/accomodation-info/accomodation-info.component.html
@@ -74,11 +74,11 @@
         <table mat-table [dataSource]="accomodation.priceIntervals">
             <ng-container matColumnDef="start">
                 <th mat-header-cell *matHeaderCellDef>Start</th>
-                <td mat-cell *matCellDef="let element">{{element.interval.start}}</td>
+                <td mat-cell *matCellDef="let element">{{element.interval.start | date:'mediumDate'}}</td>
             </ng-container>
             <ng-container matColumnDef="end">
                 <th mat-header-cell *matHeaderCellDef>End</th>
-                <td mat-cell *matCellDef="let element">{{element.interval.end}}</td>
+                <td mat-cell *matCellDef="let element">{{element.interval.end | date:'mediumDate'}}</td>
             </ng-container>
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef>Price increase</th>
