--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.scss
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.scss
@@ -25,7 +25,7 @@
 
 .accommodation {
     display: flex;
-    height: 30%;
+    height: 200px;
     flex-direction: row;
     padding: 1%;
     gap: 1%;
