--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.html
@@ -21,6 +21,26 @@
             <button mat-raised-button color="primary" type="submit">Search</button>
         </form>
     </div>
+    <div class="filters">
+        <form (ngSubmit)="search()">
+            <mat-form-field>
+                <mat-label>Min price</mat-label>
+                <input matInput type="number" [(ngModel)]="searchQuery.filterArgs.minPrice" name="minPrice">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Max price</mat-label>
+                <input matInput type="number" [(ngModel)]="searchQuery.filterArgs.maxPrice" name="maxPrice">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <label class="user-type-margin">Benefits*:</label>
+                <mat-select [(ngModel)]="searchQuery.filterArgs.benefits" name="benefits" multiple>
+                <mat-option *ngFor="let benefit of benefits" [value]="benefit.id">{{benefit.name}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button mat-raised-button color="primary" type="submit">Apply</button>
+            <button mat-raised-button type="reset">Reset</button>
+        </form>
+    </div>
     <div class="search-result">
         <div class="accommodation" *ngFor="let accommodation of accommodations">
             <img [src]="accommodation.photo">
