--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.scss
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.scss
@@ -18,6 +18,18 @@
     font-size: large;
 }
 
+.filters form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1%;
+}
+
+.filters form button {
+    font-size: large;
+}
+
 .search-result {
     display: flex;
     flex-direction: column;
