--- a/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/layout/navbar/navbar.component.html
@@ -5,6 +5,9 @@
       </button>
       <span>Accommodation Booking</span>
       <span class="spacer"></span>
+      <button mat-icon-button (click)="openNotificationsSettings()" *ngIf="isUserLogged">
+        <mat-icon>settings</mat-icon>
+      </button>
       <button mat-icon-button [matMenuTriggerFor]="accountMenu" *ngIf="isUserLogged">
         <mat-icon>account_circle</mat-icon>
       </button>
