--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-display-dialog/accommodation-display-dialog.component.scss
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-display-dialog/accommodation-display-dialog.component.scss
@@ -30,3 +30,18 @@
     flex-direction: row;
     align-items: center;
 }
+
+.rating-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .star-icon {
+    cursor: pointer;
+    font-size: 24px;
+    color: gray;
+  }
+  
+  .star-icon.filled {
+    color: gold;
+  }
