Implement recommendation system feature

--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-search/accommodation-search.component.html
@@ -44,4 +44,7 @@
             </div>
         </div>
     </div>
+    <div class="recommended-accommodations" *ngIf="isUserLogged">
+        <app-recommendations></app-recommendations>
+    </div>
 </div>
