--- a/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-display-dialog/accommodation-display-dialog.component.scss
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/search/accommodation-display-dialog/accommodation-display-dialog.component.scss
@@ -30,3 +30,16 @@
     flex-direction: row;
     align-items: center;
 }
+
+.reservation form {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: flex-end;
+    align-content: flex-end;
+    text-align: end;
+}
+
+.reservation form h2 {
+    text-align: center;
+}
