Implement api-key creation in flight-booking app

--- a/flight-booking/client/flight-booking/src/app/modules/layout/navbar/navbar.component.html
+++ b/flight-booking/client/flight-booking/src/app/modules/layout/navbar/navbar.component.html
@@ -5,6 +5,9 @@
     </button>
     <span>Flight Booking</span>
     <span class="spacer"></span>
+    <button mat-icon-button routerLink="/api-key"  *ngIf="isUserLogged && userRole == 'USER'">
+      API
+    </button>
     <button mat-icon-button [matMenuTriggerFor]="accountMenu" *ngIf="isUserLogged">
       <mat-icon>account_circle</mat-icon>
     </button>
