--- a/accommodation-booking/client/accommodation-booking/src/app/modules/user/profile/profile.component.html
+++ b/accommodation-booking/client/accommodation-booking/src/app/modules/user/profile/profile.component.html
@@ -34,6 +34,10 @@
                 <mat-label>Number</mat-label>
                 <input matInput placeholder="Number" [(ngModel)]="userProfile.address.number" name="number" required>
             </mat-form-field>
+            <mat-form-field>
+                <mat-label>Flight Booking API Key</mat-label>
+                <input matInput placeholder="Last Name" [(ngModel)]="userProfile.flightBookingApiKey" name="apiKey">
+            </mat-form-field>
         </mat-card-content>
           <mat-card-actions>
             <button mat-raised-button color="primary" type="submit">Edit</button>
